# ai_bot

./: .env.example  .gitignore  Dockerfile  README.md  bot.py  crypto.py  docker-compose.yml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  view.py
.github/workflows/: ci.yml
backend/: pyproject.toml
backend/app/: access.py  auth.py  bot.py  codec.py  config.py  main.py  view.py
frontend/: app.js  index.html  styles.css
tests/: test_crypto.py  test_view.py
webapp/: app.js  index.html  style.css
