[project]
name = "ai_bot"
version = "0.2.0"
description = "Telegram bot for decrypting and viewing NETCFG / MXCFG files"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
  "E",    # pycodestyle errors
  "W",    # pycodestyle warnings
  "F",    # pyflakes
  "I",    # isort
  "B",    # flake8-bugbear
  "UP",   # pyupgrade
  "SIM",  # flake8-simplify
  "RUF",  # ruff-specific
]
ignore = [
  "E501",  # long lines are acceptable — kept for readability of Russian strings
  "RUF001", # allow Cyrillic lookalikes in Russian user-facing strings
  "RUF002",
  "RUF003",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B"]

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
check_untyped_defs = true
no_implicit_optional = true
ignore_missing_imports = true
files = ["crypto.py", "view.py", "main.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
